--- a/hello-spring/src/main/resources/templates/hello-template.html
+++ b/hello-spring/src/main/resources/templates/hello-template.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-정적 컨텐츠입니다.
+Hello
+<p th:text="'안녕하세요. '+${name}">hello! empty</p>
 </body>
 </html>
