--- a/hello-spring/src/main/resources/templates/home.html
+++ b/hello-spring/src/main/resources/templates/home.html
@@ -10,9 +10,10 @@
     <h1>Hello Spring</h1>
     <p>회원 기능</p>
     <p>
-      <a href="/member/new">회원가입</a>
-      <a href="member">회원 목록</a>
+      <a href="/members/new">회원가입</a>
+      <a href="members">회원 목록</a>
     </p>
   </div>
 </div>
+</body>
 </html>
