--- a/hello-spring/src/main/resources/templates/members/memberList.html
+++ b/hello-spring/src/main/resources/templates/members/memberList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title> </title>
@@ -22,7 +22,7 @@
       </tbody>
     </table>
   </div>
-
 </div>
 </body>
+</div>
 </html>
